--- a/2022Spring-Web/Web_ICP4/Source/GitHubUserFinder/style.css
+++ b/2022Spring-Web/Web_ICP4/Source/GitHubUserFinder/style.css
@@ -25,20 +25,24 @@ header {
   text-align: center;
 }
 
-input[type='text'] {
+input[type="text"] {
   height: 2.2em;
   font-size: 2em;
   width: 50%;
   padding: 5px;
 }
 
-.information, .avatar {
-  vertical-align: top;
-  display: inline-block;
+#avatar {
+  width: 60%;
 }
 
 .information {
-  text-align: center;
+  display: flex;
+  align-items: center;
+
+  height: 100%;
+
+  border: 0px solid #000;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
@@ -65,4 +69,9 @@ h2 {
 
 .profile:hover {
   background-color: #b300b3;
+}
+
+#userInfo > li {
+  list-style: none;
+  text-align: left;
 }
