Task list feature functionality complete

--- a/2022Spring-Web/Web_ICP5/source/ToDoApp/src/app/app.component.css
+++ b/2022Spring-Web/Web_ICP5/source/ToDoApp/src/app/app.component.css
@@ -1,3 +1,13 @@
 .task-list {
-  color: blue;
+  color: #000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  width: 50%;
+  margin: 0 auto;
+}
+
+.completed {
+  text-decoration: line-through;
 }
