--- a/2022Spring-Web/Web_ICP5/source/ToDoApp/src/app/components/task-input/task-input.component.html
+++ b/2022Spring-Web/Web_ICP5/source/ToDoApp/src/app/components/task-input/task-input.component.html
@@ -1,3 +1,15 @@
-<h2>Add a new task to the list</h2>
-<input type="text" [(ngModel)]="text" id="user-task" />
-<button type="button" (click)="newItem(text)">Add New Task</button>
+<div class="row">
+  <div class="col text-center">
+    <h2>Add a new task to the list</h2>
+  </div>
+</div>
+<div class="row justify-content-center">
+  <div class="col-4">
+    <input type="text" [(ngModel)]="text" id="user-task" class="newTaskField" />
+  </div>
+  <div class="col-4">
+    <button class="btn-primary" type="button" (click)="newItem(text)">
+      Add New Task
+    </button>
+  </div>
+</div>
