--- a/2022Spring-Mobile/Mobile_ICP8/app/src/main/res/layout/activity_main.xml
+++ b/2022Spring-Mobile/Mobile_ICP8/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,21 @@
         android:padding="20dp"
         />
 
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="password"
+        android:layout_below="@+id/username"
+        android:layout_margin="20dp"
+        android:padding="20dp"
+        />
+
     <Button
         android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/username"
+        android:layout_below="@id/password"
         android:layout_margin="20dp"
         android:padding="20dp"
         android:text="Button"
