--- a/2022Spring-Mobile/Mobile_ICP8/source/app/src/main/res/layout/activity_main.xml
+++ b/2022Spring-Mobile/Mobile_ICP8/source/app/src/main/res/layout/activity_main.xml
@@ -38,13 +38,13 @@
         />
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/password"
         android:layout_margin="20dp"
         android:padding="20dp"
-        android:text="Button"
+        android:text="Login"
         android:textSize="40sp" />
 
 </RelativeLayout>
