--- a/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_main.xml
+++ b/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="wrap_content"
+        android:layout_width="345dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
@@ -22,12 +22,14 @@
         android:id="@+id/subjectText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:padding="20dp"
-        android:hint="Subject Text"
-        android:textSize="25sp"
         android:layout_below="@+id/email"
-        />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:hint="Subject Text"
+        android:padding="20dp"
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/messageText"
