--- a/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_menu.xml
+++ b/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_menu.xml
@@ -39,7 +39,7 @@
         android:text="Choose your toppings"
         android:textAlignment="center"
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/peperoni"
+        app:layout_constraintBottom_toTopOf="@+id/pepperoni"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,10 +92,10 @@
         app:layout_constraintTop_toBottomOf="@+id/menuTitle2" />
 
     <CheckBox
-        android:id="@+id/peperoni"
+        android:id="@+id/pepperoni"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Peperoni"
+        android:text="Pepperoni"
         app:layout_constraintBottom_toTopOf="@+id/cheese"
         app:layout_constraintEnd_toStartOf="@+id/mushroom"
         app:layout_constraintHorizontal_bias="0.5"
@@ -111,7 +111,7 @@
         app:layout_constraintEnd_toStartOf="@+id/gpepper"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/peperoni" />
+        app:layout_constraintTop_toBottomOf="@+id/pepperoni" />
 
     <CheckBox
         android:id="@+id/mushroom"
@@ -121,7 +121,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gpepper"
         app:layout_constraintEnd_toStartOf="@+id/olives"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/peperoni"
+        app:layout_constraintStart_toEndOf="@+id/pepperoni"
         app:layout_constraintTop_toBottomOf="@+id/menuTitle3" />
 
     <CheckBox
