--- a/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_summary.xml
+++ b/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_summary.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,23 +7,48 @@
     tools:context=".summary">
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Toppings"
-        app:layout_constraintBottom_toTopOf="@+id/toppings_list"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/customer"
+        android:text="Hello customer..."
+        android:layout_centerHorizontal="true"
+        android:layout_margin="30dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/quantity_size"
+        android:text="You ordered (quantity) (size) pizzas."
+        android:layout_below="@+id/customer"
+        android:layout_margin="20dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:id="@+id/toppings_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Toppings"
+        android:layout_below="@+id/quantity_size"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"/>
 
     <ListView
         android:id="@+id/toppings_list"
         android:layout_width="209dp"
         android:layout_height="322dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_below="@+id/toppings_title"
+        android:layout_margin="20dp"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Total: $"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="15dp"
+        android:layout_below="@+id/toppings_list"/>
+</RelativeLayout>
