App Icon added.  Order/Email activities implemented.

--- a/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_summary.xml
+++ b/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_summary.xml
@@ -51,4 +51,13 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="15dp"
         android:layout_below="@+id/toppings_list"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/order"
+        android:layout_below="@id/total"
+        android:layout_margin="20dp"
+        android:layout_centerHorizontal="true"
+        android:text="Go To Order" />
 </RelativeLayout>
