--- a/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_main.xml
+++ b/2022Spring-Mobile/Mobile_ICP9/app/src/main/res/layout/activity_main.xml
@@ -6,50 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/summary"
+        android:text="ORDER SUMMARY"
+        android:layout_margin="20dp"
+        android:layout_centerHorizontal="true"
+        />
+
     <EditText
         android:id="@+id/email"
         android:layout_width="345dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/summary"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:hint="Recipient Email Address"
+        android:hint="Email Address"
         android:padding="20dp"
-        android:textSize="25sp" />
-
-    <EditText
-        android:id="@+id/subjectText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/email"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:hint="Subject Text"
-        android:padding="20dp"
-        android:textSize="25sp" />
-
-    <EditText
-        android:id="@+id/messageText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:padding="20dp"
-        android:hint="Message Text"
-        android:textSize="25sp"
-        android:layout_below="@+id/subjectText"
-        android:lines="8"
-        />
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send"
+        android:text="Order"
         android:layout_margin="10dp"
         android:padding="10dp"
-        android:layout_below="@+id/messageText"/>
+        android:layout_below="@+id/email"/>
 
 </RelativeLayout>
